2002-07-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/twinkle.ly: Bugfix: no automaticMelismata.

2002-07-08  Han-Wen  <hanwen@cs.uu.nl>

	* lily/voice-devnull-engraver.cc (try_music):
	lily/thread-devnull-engraver.cc: use proper spelling for #'always.

	* lily/unfolded-repeat-iterator.cc (Unfolded_repeat_iterator):
	copy here_mom_ too. This fixes an obscure bug with combining
	partcombine and repeat

	* lily/chord-tremolo-iterator.cc (Chord_tremolo_iterator): copy
	factor too. 

2002-07-07  Han-Wen  <hanwen@cs.uu.nl>

	* mutopia/J.S.Bach/pa.ly: remove
	* mutopia/J.S.Bach/Duette/: remove  
	
	* scm/font.scm (change-rhs-size): add support for "paper19.ly"

	* VERSION: 1.5.66 released

	* scm/grob-description.scm (all-grob-descriptions): add
	item-interface where necessary

	* lily/score-engraver.cc (one_time_step): warn for grobs created
	during stop_translation_timestep().

	* lily/a2-engraver.cc: restrict acknowledged grob types.

	* lily/chord-name-engraver.cc: remove acknowledge_grob().

	* Documentation/user/tutorial.itely: doc carnage.

2002-07-06  Rune Zedeler  <rune@zedeler.dk>

	* Documentation/user/refman.itely: Documented accidentals
	(incl. bugs), subdivideBeams and drum/percussion notation.

	* lily/translator-group.cc, lily/include/translator-group.hh
	(Translator_group::set_children_property): removed.

	* lily/accidental-engraver.cc: don't use
	Translator_group::set_children_property.

	* lily/new-accidental-engraver.cc: Added. More correct
	accidentals, but wrong spacing.

	* lily/beam-enagraver.cc, lily/auto-beam-engraver.cc: Small
	subdivideBeams-fixes.

	* scm/drums.scm: Small changes/fixes in instruments and maps
	
2002-07-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lexer-gcc-3.1.sh: Fixes and more comments.

	* Documentation/topdocs/INSTALL.texi: Add comment about gcc-3.0.4
	problems.

	* lily/include/stream.hh:
	* lily/include/moment.hh:
	* lily/include/midi-stream.hh:
	* lily/streams.cc:
	* lily/scm-option.cc:
	* lily/parser.yy: